# testovoe_steelsmart

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
config/blog/: admin.py  models.py  tests.py  urls.py  views.py
config/blog/migrations/: 0001_initial.py  0002_alter_post_preview_image.py  0003_alter_post_content.py
config/blog/static/css/: style.css
config/blog/templates/blog/: base.html  category_detail.html  index.html  post_detail.html
config/config/: settings.py  urls.py
steelsmart/apps/blog/: admin.py  models.py  tests.py  urls.py  views.py
steelsmart/apps/blog/static/css/: style.css
steelsmart/apps/blog/templates/blog/: base.html  categories.html
steelsmart/core/: asgi.py  settings.py  urls.py  wsgi.py
steelsmart/core/common/: README.md
